--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,18 +11,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
-    <style>
-        .qr-container { display: flex; gap: 10px; flex-wrap: wrap; }
-        .qr-code { cursor: pointer; border: 2px solid transparent; padding: 5px; }
-        .selected { border: 2px solid green; }
-    </style>
 </head>
 <body>
     <h2>Sélectionnez les QR Codes</h2>
     <div class="qr-container">
-        <img src="qr1.png" class="qr-code" data-id="1">
-        <img src="qr2.png" class="qr-code" data-id="2">
-        <img src="qr3.png" class="qr-code" data-id="3">
+        <select id="qr-select" multiple>
+            <option value="1">QR Code 1</option>
+            <option value="2">QR Code 2</option>
+            <option value="3">QR Code 3</option>
+        </select>
     </div>
     <button id="submit">Envoyer en BDD</button>
 </body>
