--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Selection</title>
+    <script defer src="qrcode.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap">
+    
 </head>
 <body>
     <div class="top-right-buttons">
@@ -34,9 +36,9 @@
 
     <script>
         const qrImages = {
-            1: 'qr1.png',
-            2: 'qr2.png',
-            3: 'qr3.png'
+            1: 'https://example.com/qr1.png', // Replace with actual image URL
+            2: 'https://example.com/qr2.png', // Replace with actual image URL
+            3: 'https://example.com/qr3.png'  // Replace with actual image URL
         };
 
         document.getElementById('qr-select').addEventListener('change', function() {
@@ -51,13 +53,13 @@
             newOption.value = newValue;
             newOption.text = 'QR Code ' + newValue;
             qrSelect.add(newOption);
-            qrImages[newValue] = 'qr' + newValue + '.png'; // Add new image path
+            qrImages[newValue] = 'https://example.com/qr' + newValue + '.png'; // Add new image URL
         });
 
         document.getElementById('remove-qr').addEventListener('click', function() {
             const qrSelect = document.getElementById('qr-select');
             if (qrSelect.selectedIndex !== -1) {
-                delete qrImages[qrSelect.value]; // Remove image path
+                delete qrImages[qrSelect.value]; // Remove image URL
                 qrSelect.remove(qrSelect.selectedIndex);
                 document.getElementById('qr-image').src = 'default.png'; // Reset image
             } else {
